funcion rechazo removido

--- a/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
@@ -10,9 +10,9 @@
       <button mat-icon-button matTooltip="Aceptar" (click)="accept()">
         <mat-icon>done</mat-icon>
       </button>
-      <button mat-icon-button matTooltip="Rechazar" (click)="reject()">
+      <!-- <button mat-icon-button matTooltip="Rechazar" (click)="reject()">
         <mat-icon>block</mat-icon>
-      </button>
+      </button> -->
       } @case ("received") {
       <button mat-icon-button matTooltip="Remitir" (click)="send()">
         <mat-icon>send</mat-icon>
