--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -18,13 +18,13 @@
     >
       <mat-icon>check</mat-icon>
     </button>
-    <button
+    <!-- <button
       mat-icon-button
       matTooltip="Rechazar"
       (click)="reject(selection.selected)"
     >
       <mat-icon>block</mat-icon>
-    </button>
+    </button> -->
     }
     <button
       mat-icon-button
