--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -196,10 +196,10 @@
               <mat-icon>done</mat-icon>
               <span>Aceptar</span>
             </button>
-            <button mat-menu-item (click)="reject([row])">
+            <!-- <button mat-menu-item (click)="reject([row])">
               <mat-icon>block</mat-icon>
               <span>Rechazar</span>
-            </button>
+            </button> -->
             } @else {
             <button (click)="send(row)" mat-menu-item>
               <mat-icon>send</mat-icon>
