correcion paginacion inbox y outbox

--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -232,6 +232,7 @@
       [length]="datasize()"
       [pageIndex]="index()"
       [pageSize]="limit()"
+      [pageSizeOptions]="[10, 20, 30, 50]"
       (page)="onPageChange($event)"
     />
   </div>
