--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -247,6 +247,7 @@
     [length]="dataSize()"
     [pageIndex]="index()"
     [pageSize]="limit()"
+    [pageSizeOptions]="[10, 20, 30, 50]"
     (page)="onPageChange($event)"
   />
 </div>
