correcion para deploy

--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -19,7 +19,7 @@
       <search-input
         [initValue]="term()"
         (onSearch)="search($event)"
-        placeholder="Alterno / Destinatario"
+        placeholder="Alterno / Referencia"
       />
     </div>
   </div>
