--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -12,7 +12,7 @@
       <search-input
         [initValue]="term()"
         (onSearch)="search($event)"
-        placeholder="Alterno / Referencia"
+        placeholder="Correlativo / Referencia"
       />
     </div>
   </div>
