--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -13,7 +13,7 @@
     } @if(canDoPendingAction){
     <button
       mat-icon-button
-      matTooltip="Recibir"
+      matTooltip="Recibir elementos seleccionados"
       (click)="accept(selection.selected)"
     >
       <mat-icon>check</mat-icon>
@@ -98,7 +98,7 @@
       <search-input
         [initValue]="term()"
         (onSearch)="search($event)"
-        placeholder="Codigo / Destinatario"
+        placeholder="Alterno / Referencia"
       />
     </div>
   </div>
@@ -127,14 +127,11 @@
       <ng-container matColumnDef="priority">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row" class="w-8">
-          @switch (row.priority) {
-            @case (0) {
-              <mat-icon style="color: #CED4DA">label_important</mat-icon>
-            }
-            @default {
-              <mat-icon style="color: #FFA200">label_important</mat-icon>
-            }
-          }
+          @switch (row.priority) { @case (0) {
+          <mat-icon style="color: #ced4da">label_important</mat-icon>
+          } @default {
+          <mat-icon style="color: #ffa200">label_important</mat-icon>
+          } }
         </td>
       </ng-container>
 
@@ -194,7 +191,7 @@
             @if(row.status === 'pending') {
             <button mat-menu-item (click)="accept([row])">
               <mat-icon>done</mat-icon>
-              <span>Aceptar</span>
+              <span>Recibir</span>
             </button>
             <!-- <button mat-menu-item (click)="reject([row])">
               <mat-icon>block</mat-icon>
@@ -224,7 +221,9 @@
         [class.mail-pending]="row.status === 'pending'"
       ></tr>
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell p-3" [attr.colspan]="displayedColumns.length">No se encontraron resultados</td>
+        <td class="mat-cell p-3" [attr.colspan]="displayedColumns.length">
+          No se encontraron resultados
+        </td>
       </tr>
     </table>
     <mat-paginator
