--- a/src/app/reports/presentation/pages/report-search/report-search.component.html
+++ b/src/app/reports/presentation/pages/report-search/report-search.component.html
@@ -1,4 +1,4 @@
-<div class="p-2 sm:p-4">
+<div class="p-2 sm:p-4 space-y-6">
   <mat-accordion>
     <form [formGroup]="filterForm()" (ngSubmit)="generate()">
       <mat-expansion-panel expanded="true">
@@ -50,7 +50,7 @@
             <div>
               <mat-form-field>
                 <mat-label>Rango de registro</mat-label>
-                <mat-date-range-input [rangePicker]="picker" [min]="CURRENT_DATE">
+                <mat-date-range-input [rangePicker]="picker" [max]="CURRENT_DATE">
                   <input
                     matStartDate
                     formControlName="start"
@@ -134,7 +134,7 @@
   </mat-accordion>
 
   @if (isLoading()){
-    <div class="flex flex-col gap-y-1 mt-4">
+    <div class="flex flex-col gap-y-1">
       <p class="text-xl">Generando reporte....</p>
       <mat-progress-bar mode="indeterminate" />
     </div>
@@ -147,14 +147,16 @@
   }
 
   @if(!isLoading() && hasSearched() && datasource().length > 0){
-    <report-procedure-table [data]="datasource()" [columns]="COLUMNS" />
-    <mat-paginator
+    <div>
+      <report-procedure-table [data]="datasource()" [columns]="COLUMNS" />
+      <mat-paginator
       showFirstLastButtons
       [pageSizeOptions]="[10, 20, 30, 50]"
       [pageSize]="limit()"
       [pageIndex]="index()"
       [length]="datasize()"
       (page)="onPageChange($event)"
-    />
+      />
+    </div>
   } 
 </div>
