--- a/src/app/reports/presentation/pages/report-segments/report-segments.component.html
+++ b/src/app/reports/presentation/pages/report-segments/report-segments.component.html
@@ -22,7 +22,7 @@
           <div class="w-full sm:w-1/3">
             <mat-form-field appearance="outline" class="w-full">
               <mat-label>Ingrese un rango de fechas</mat-label>
-              <mat-date-range-input [rangePicker]="picker">
+              <mat-date-range-input [rangePicker]="picker" [max]="CURRENT_DATE">
                 <input
                   matStartDate
                   placeholder="Fecha inicio"
