--- a/src/app/reports/presentation/pages/report-unit/report-unit.component.html
+++ b/src/app/reports/presentation/pages/report-unit/report-unit.component.html
@@ -5,7 +5,7 @@
         <mat-expansion-panel-header>
           <mat-panel-title>PARAMENTROS BUSQUEDA </mat-panel-title>
         </mat-expansion-panel-header>
-        <div class="grid grid-cols-1 sm:grid-cols-5 gap-4">
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
           <div>
             <select-search
               compareKey="_id"
@@ -26,6 +26,18 @@
               placeholder="Seleccione una deoendencia"
               (onSelect)="onSelectDependency($event)"
             />
+          </div>
+            <div>
+            <mat-form-field>
+              <mat-label>Tipo de busqueda</mat-label>
+              <mat-select formControlName="filterBy">
+                @for (option of FILTER_OPTIONS; track $index) {
+                <mat-option [value]="option.value">{{
+                  option.label
+                }}</mat-option>
+                }
+              </mat-select>
+            </mat-form-field>
           </div>
           <div>
             <mat-form-field>
@@ -78,60 +90,65 @@
   </mat-accordion>
 
   @if (isLoading()){
-    <div class="flex flex-col gap-y-1 mt-4">
-        <p class="text-xl">Generando reporte....</p>
-        <mat-progress-bar mode="indeterminate" />
-    </div>
-  } 
+  <div class="flex flex-col gap-y-1 mt-4">
+    <p class="text-xl">Generando reporte....</p>
+    <mat-progress-bar mode="indeterminate" />
+  </div>
+  } @if(!isLoading() && hasSearched() && dataSource().length === 0){
+  <div class="text-center p-8 text-lg">
+    No se encontraron resultados para los filtros seleccionados.
+  </div>
+  } @if(!isLoading() && dataSource().length > 0){
+  <table mat-table [dataSource]="dataSource()" class="mt-6">
+    <ng-container matColumnDef="officer">
+      <th mat-header-cell *matHeaderCellDef>Usuario</th>
+      <td mat-cell *matCellDef="let element">
+        <div class="block font-medium text-base">
+          @if(element.fullName){
+          {{ element.fullName | titlecase }}
+          } @else {
+          <span class="text-red-600">Sin asignar</span>
+          }
+        </div>
+        <div class="block text-xs">{{ element.jobTitle }}</div>
+      </td>
+        <td mat-footer-cell *matFooterCellDef> Total </td>
+    </ng-container>
 
-  @if(!isLoading() && hasSearched() && dataSource().length === 0){
-    <div class="text-center p-8 text-lg">
-        No se encontraron resultados para los filtros seleccionados.
-    </div>
-  }
+    @for (column of statusColumnsToDisplay; track $index) {
+    <ng-container [matColumnDef]="column.columnDef">
+      <th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
+      <td mat-cell *matCellDef="let element" class="w-40">
+        {{ element[column.columnDef] }}
+      </td>
+        <td mat-footer-cell *matFooterCellDef> {{getTotalByProperty(column.columnDef)}} </td>
+    </ng-container>
+    }
 
-  @if(!isLoading() && dataSource().length > 0){
-    <table mat-table [dataSource]="dataSource()" class="mt-6">
-        <ng-container matColumnDef="officer">
-            <th mat-header-cell *matHeaderCellDef>Usuario</th>
-            <td mat-cell *matCellDef="let element">
-                <div class="block font-medium text-base">
-                @if(element.fullName){
-                {{ element.fullName | titlecase }}
-                } @else {
-                <span class="text-red-600">Sin asignar</span>
-                }
-                </div>
-                <div class="block text-xs">{{ element.jobTitle }}</div>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="total">
+      <th mat-header-cell *matHeaderCellDef>Total</th>
+      <td mat-cell *matCellDef="let element">{{ element.total }}</td>
+      <td mat-footer-cell *matFooterCellDef> {{getTotalByProperty("total")}} </td>
+    </ng-container>
 
-        @for (column of statusColumnsToDisplay; track $index) {
-            <ng-container [matColumnDef]="column.columnDef">
-                <th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
-                <td mat-cell *matCellDef="let element" class="w-32">
-                    {{ element[column.columnDef] }}
-                </td>
-            </ng-container>
-        }
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element" class="w-44">
+        <button
+          matButton
+          (click)="getInbox(element)"
+          [disabled]="isLoadingInbox()"
+        >
+          <mat-icon>print</mat-icon>
+          Pendientes
+        </button>
+      </td>
+       <td mat-footer-cell *matFooterCellDef>  </td>
+    </ng-container>
 
-        <ng-container matColumnDef="total">
-            <th mat-header-cell *matHeaderCellDef>Total</th>
-            <td mat-cell *matCellDef="let element">{{ element.total }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="options">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element" class="w-44">
-                <button matButton (click)="getInbox(element)" [disabled]="isLoadingInbox()">
-                <mat-icon>print</mat-icon>
-                Pendientes
-                </button>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+  </table>
   }
 </div>
