correcion nombre para helpers

--- a/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
@@ -7,7 +7,7 @@
     <span class="flex-1"></span>
     <div class="flex gap-x-2">
       @switch (data()?.status) { @case ("pending") {
-      <button mat-icon-button matTooltip="Aceptar" (click)="accept()">
+      <button mat-icon-button matTooltip="Recibir" (click)="accept()">
         <mat-icon>done</mat-icon>
       </button>
       <!-- <button mat-icon-button matTooltip="Rechazar" (click)="reject()">
