--- a/src/app/layout/presentation/pages/home/home.component.html
+++ b/src/app/layout/presentation/pages/home/home.component.html
@@ -8,6 +8,10 @@
     </div>
     <span class="flex-1"></span>
     <div class="flex gap-x-3">
+      <button mat-icon-button matTooltip="Chat" routerLink="/home/chat">
+        <mat-icon>chat</mat-icon>
+      </button>
+
       <button
         mat-icon-button
         matTooltip="Comunicados"
