--- a/src/app/chat/presentation/pages/chat/chat.component.html
+++ b/src/app/chat/presentation/pages/chat/chat.component.html
@@ -1,74 +1,71 @@
-<div class="mx-auto h-full">
-  <div class="h-full">
-    <div class="flex border border-grey rounded shadow-lg h-full">
-      <!-- Left -->
-      <div class="w-1/3 border">
-        <chat-list [(chats)]="chats" (onChatSelect)="selectChat($event)" />
+<div class="flex h-full">
+  <!-- Left -->
+  <div class="w-1/3">
+    <chat-list
+      [(chats)]="chats"
+      (onChatSelect)="selectChat($event)"
+      [selectedChat]="selectedChat()"
+    />
+  </div>
+
+  <!-- Right -->
+  <div class="w-2/3 border flex flex-col">
+    @if(selectedChat()){
+    <div
+      class="py-2 px-4 flex flex-row justify-between items-center"
+    >
+      <div class="flex items-center">
+        <div>
+          <img class="w-10 h-10 rounded-full" src="images/avatar.png" />
+        </div>
+        <div class="ml-4">
+          <p class="text-lg">
+            {{ selectedChat()?.name | titlecase }}
+          </p>
+          <p class="text-grey-darker text-xs mt-1"></p>
+        </div>
       </div>
-
-      <!-- Right -->
-      <div class="w-2/3 border flex flex-col">
-        @if(selectedChat()){
-        <div
-          class="py-2 px-4 flex flex-row justify-between items-center"
-          style="background-color: var(--mat-sys-surface-dim)"
-        >
-          <div class="flex items-center">
-            <div>
-              <img class="w-10 h-10 rounded-full" src="images/avatar.png" />
-            </div>
-            <div class="ml-4">
-              <p class="text-lg">
-                {{ selectedChat()?.name | titlecase }}
-              </p>
-              <p class="text-grey-darker text-xs mt-1"></p>
-            </div>
-          </div>
-        </div>
-        <div class="flex-1 overflow-auto">
-          <div class="py-2 px-4">
-            @for (item of messages(); track $index) {
-            <chat-bubble [message]="item" />
-            }
-          </div>
-        </div>
-        <div class="px-4 py-4 flex items-center">
-          <div class="w-full h-[54px]">
-            <mat-form-field>
-              <mat-label>Mensaje</mat-label>
-              <input
-                matInput
-                placeholder="Ingrese el mensaje a enviar"
-                [(ngModel)]="messageContent"
-                (keydown.enter)="sendMessage()"
-              />
-            </mat-form-field>
-          </div>
-        </div>
-        } @else {
-        <!-- Empty chat -->
-        <div class="flex-1">
-          <div
-            class="flex flex-col items-center justify-center h-full text-center"
-          >
-            <div class="max-w-md mx-auto">
-              <img
-                src="images/icons/chat-bubbles.png"
-                class="w-24 h-24 mb-6 text-gray-400 dark:text-gray-500 mx-auto"
-                alt="Chat icon"
-              />
-
-              <h1 class="text-2xl font-semibold mb-2">Seleccione un chat</h1>
-
-              <p class="text-sm">
-                Inicie una nueva conversación o seleccione una de las existentes
-                para empezar a chatear.
-              </p>
-            </div>
-          </div>
-        </div>
+    </div>
+    <div class="flex-1 overflow-auto">
+      <div class="py-4 px-6">
+        @for (item of messages(); track $index) {
+        <chat-bubble [message]="item" />
         }
       </div>
     </div>
+    <div class="px-4 py-4 flex items-center">
+      <div class="w-full h-[54px]">
+        <mat-form-field>
+          <mat-label>Mensaje</mat-label>
+          <input
+            matInput
+            placeholder="Ingrese el mensaje a enviar"
+            [(ngModel)]="messageContent"
+            (keydown.enter)="sendMessage()"
+          />
+        </mat-form-field>
+      </div>
+    </div>
+    } @else {
+    <!-- Empty chat -->
+    <div class="flex-1">
+      <div class="flex flex-col items-center justify-center h-full text-center">
+        <div class="max-w-md mx-auto">
+          <img
+            src="images/icons/chat-bubbles.png"
+            class="w-24 h-24 mb-6 text-gray-400 dark:text-gray-500 mx-auto"
+            alt="Chat icon"
+          />
+
+          <h1 class="text-2xl font-semibold mb-2">Seleccione un chat</h1>
+
+          <p class="text-sm">
+            Inicie una nueva conversación o seleccione una de las existentes
+            para empezar a chatear.
+          </p>
+        </div>
+      </div>
+    </div>
+    }
   </div>
 </div>
