--- a/src/app/chat/presentation/pages/chat/chat.component.html
+++ b/src/app/chat/presentation/pages/chat/chat.component.html
@@ -1,47 +1,12 @@
 <div class="flex h-full">
-  <!-- Left -->
-  <div class="w-1/3">
-    <chat-list
-      [(chats)]="chats"
-      (onChatSelect)="selectChat($event)"
-    />
+  <div class="w-1/3 h-full">
+    <div class="h-full overflow-y-auto">
+      <chat-list [(chats)]="chats" (onChatSelect)="onSelectChat($event)"/> 
+    </div>
   </div>
-  <!-- Right -->
-  <div class="w-2/3 border flex flex-col">
+  <div class="w-2/3 h-full">
     @if(selectedChat()){
-    <div class="py-2 px-4 flex flex-row justify-between items-center">
-      <div class="flex items-center">
-        <div>
-          <img class="w-10 h-10 rounded-full" src="images/avatar.png" />
-        </div>
-        <div class="ml-4">
-          <p class="text-lg">
-            {{ selectedChat()?.name | titlecase }}
-          </p>
-          <p class="text-grey-darker text-xs mt-1"></p>
-        </div>
-      </div>
-    </div>
-    <div class="flex-1 overflow-y-auto p-2 m-3 border-2" #scrollableDiv>
-      <infinite-scroll-wrapper [containerRef]="scrollableDiv" (onScrollUp)="onScrollUp()">
-        @for (item of messages(); track $index) {
-        <chat-bubble [message]="item" />
-        }
-      </infinite-scroll-wrapper>
-    </div>
-    <div class="px-4 py-4 flex items-center">
-      <div class="w-full h-[54px]">
-        <mat-form-field>
-          <mat-label>Mensaje</mat-label>
-          <input
-            matInput
-            placeholder="Ingrese el mensaje a enviar"
-            [(ngModel)]="messageContent"
-            (keydown.enter)="sendMessage()"
-          />
-        </mat-form-field>
-      </div>
-    </div>
+      <chat-window [(selectedChat)]="currentChat" [(index)]="chatIndex" (onSendMessage)="startChat($event)"/>
     } @else {
     <div class="flex-1">
       <div class="flex flex-col items-center justify-center h-full text-center">
