--- a/src/app/chat/presentation/pages/chat/chat.component.html
+++ b/src/app/chat/presentation/pages/chat/chat.component.html
@@ -1,12 +1,19 @@
 <div class="flex h-full">
   <div class="w-1/3 h-full">
-    <div class="h-full overflow-y-auto">
-      <chat-list [(chats)]="chats" (onChatSelect)="onSelectChat($event)"/> 
+    <div class="h-full overflow-y-auto border-r">
+      <chat-list [(chats)]="chats" [selectedChat]="selectedChat()" (onSelectChat)="onSelectChat($event)"/> 
     </div>
   </div>
   <div class="w-2/3 h-full">
     @if(selectedChat()){
-      <chat-window [(selectedChat)]="currentChat" [(index)]="chatIndex" (onSendMessage)="startChat($event)"/>
+      @if(!messages.isLoading() && messages.hasValue()){
+        <chat-window @fadeIn [(messages)]="messages.value" [(selectedChat)]="currentChat" [(chatIndex)]="chatIndex" (onSendMessage)="startChat($event)"/>
+      }
+      @else {
+        <div class="flex items-center justify-center h-full">
+          <p>Cargando mensajes...</p>
+        </div>
+      }
     } 
     @else {
       <div class="flex flex-col items-center justify-center h-full text-center">
