correcion implementacion chat

--- a/src/app/chat/presentation/components/chat-window/chat-window.component.html
+++ b/src/app/chat/presentation/components/chat-window/chat-window.component.html
@@ -26,6 +26,11 @@
         Cargando mensajes...
       </div>
     }
+    @if(!isLoading() && messages().length === 0){
+      <div class="text-center py-4">
+        Escriba un mensaje para iniciar la conversacion.
+      </div>
+    }
     @for (item of messages(); track $index) {
       <chat-bubble [message]="item" />
     }
