--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -211,7 +211,7 @@
               <mat-icon>description</mat-icon>
               <span>Hoja de ruta</span>
             </button>
-            <button mat-menu-item [routerLink]="['../chat']" [queryParams]="{ account: row.sender.account}">
+            <button mat-menu-item (click)="chat(row)">
               <mat-icon>chat</mat-icon>
               <span>Iniciar conversación</span>
             </button>
