--- a/src/app/chat/presentation/components/chat-window/chat-window.component.html
+++ b/src/app/chat/presentation/components/chat-window/chat-window.component.html
@@ -1,20 +1,21 @@
-<div class="flex flex-col h-full">
-  <div class="py-2 px-4 flex flex-row justify-between items-center">
-    <div class="flex items-center">
-      <div>
-        <img class="w-10 h-10 rounded-full" src="images/avatar.png" />
-      </div>
-      <div class="ml-4">
-        <p class="text-lg">
-          {{ chat().name | titlecase }}
-        </p>
-        <p class="text-grey-darker text-xs mt-1"></p>
-      </div>
+<div class="py-2 px-4 flex flex-row justify-between items-center h-4/10 bg-green-400">
+  <div class="flex items-center">
+    <div>
+      <img class="w-10 h-10 rounded-full" src="images/avatar.png" />
+    </div>
+    <div class="ml-4">
+      <p class="text-lg">
+        {{ chat().name | titlecase }}
+      </p>
+      <p class="text-grey-darker text-xs mt-1"></p>
     </div>
   </div>
-  <div class="flex-1 flex flex-col relative">
+</div>
+<div class="flex flex-col border-4 h-[90%] ">
+  hol
+  <!-- <div class="flex-grow relative flex flex-col ">
     <div
-      class="flex-1 overflow-y-auto px-6 py-2"
+      class="h-[200px] overflow-y-auto px-6 py-2 relative"
       infiniteScroll
       [infiniteScrollDistance]="2"
       [infiniteScrollThrottle]="50"
@@ -33,11 +34,11 @@
       }
     </div>
 
-    <div class="p-4 flex items-center gap-x-4">
-      <div class="w-auto">
-        <file-chat-selector />
+    <div class="flex items-center gap-x-4 px-4 h-[100px]">
+      <div class="w-11">
+        <file-chat-selector (onCofirmFiles)="sendFiles($event)" />
       </div>
-      <div class="flex-1 h-[52px]">
+      <div class="flex-1 h-[48px]">
         <mat-form-field>
           <mat-label>Ingrese un mensaje</mat-label>
           <input
@@ -48,5 +49,5 @@
         </mat-form-field>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
